'重构树形表格'

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     },
     "dependencies": {
         "axios": "^0.21.1",
-        "vue": "^2.5.0"
+        "vue": "^2.5.0",
+        "vxe-table": "^3.2.20",
+        "xe-utils": "^3.2.1"
     }
 }
